tests/fixtures/invalid/unknown-payload-type.mobileconfig
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>PayloadContent</key>
	<array>
		<dict>
			<key>PayloadDisplayName</key>
			<string>Unknown Payload</string>
			<key>PayloadIdentifier</key>
			<string>com.example.unknown</string>
			<key>PayloadType</key>
			<string>com.nonexistent.payload.type</string>
			<key>PayloadUUID</key>
			<string>11111111-1111-1111-1111-111111111111</string>
			<key>PayloadVersion</key>
			<integer>1</integer>
		</dict>
	</array>
	<key>PayloadDisplayName</key>
	<string>Unknown Type Profile</string>
	<key>PayloadIdentifier</key>
	<string>com.example.profile.unknown</string>
	<key>PayloadType</key>
	<string>Configuration</string>
	<key>PayloadUUID</key>
	<string>22222222-2222-2222-2222-222222222222</string>
	<key>PayloadVersion</key>
	<integer>1</integer>
</dict>
</plist>
